--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,3 +23,9 @@ MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=anubhavsaha
 MYAPP_UPLOAD_STORE_PASSWORD=anubhavsaha
 MYAPP_UPLOAD_KEY_PASSWORD=anubhavsaha
+
+
+MYAPP_RELEASE_STORE_FILE=my-upload-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=anubhavsaha
+MYAPP_RELEASE_STORE_PASSWORD=anubhavsaha
+MYAPP_RELEASE_KEY_PASSWORD=anubhavsaha
