--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+
+
+
+
 buildscript {
     ext {
         buildToolsVersion = "28.0.3"
@@ -16,6 +20,17 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+}
+
+subprojects {
+    afterEvaluate { project ->
+        if (project.hasProperty("android")) {
+            android {
+                compileSdkVersion 28       // version of compile sdk used for project
+                buildToolsVersion '28.0.3'    // version of build tool used for project
+            }
+        }
     }
 }
 
@@ -37,3 +52,8 @@ allprojects {
         maven { url 'https://jitpack.io' }
     }
 }
+
+
+
+
+
