--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,6 +127,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    aaptOptions {
+        noCompress 'tflite'
+    }
     defaultConfig {
         applicationId "com.client"
         minSdkVersion rootProject.ext.minSdkVersion
